Fixed navigation and video bugs when being dynamically generated, added navigation effects (D3)

--- a/worldtour/public/styles/main.css
+++ b/worldtour/public/styles/main.css
@@ -1,18 +1,16 @@
 * {margin: 0;padding: 0;font-family: sans-serif;}
 
-/*
-***********************
-* =landing page
-***********************
-*/
+/*********************************
+		=BEGIN LANDING PAGE
+*********************************/		
 
 .bgvideo {position: fixed;bottom: 0;top: 0;min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: -9999;}
 div#logo img {margin-left:50px;margin-top: 30px;}
-
-nav {background-color:rgba(0,79,0,0.3);margin-top:35%;padding:28px;text-align: right;transition:all 0.4s;}
+nav {background-color:rgba(0,79,0,0.3);margin-top:35%;padding:28px;text-align: right;transition:all 0.5s;y-index: -999;}
 #lpage nav ul li {display: inline;}
 #lpage nav ul li a {text-decoration: none;color:#bafbbc; font-weight: bold;font-size: 20px;margin-left:40px;}
 #lpage nav ul li a:hover {color: #001801;}
 
-#dynamic video {position: absolute;bottom: 0;top: 0;min-width: 100%;min-height: 20%;width: auto;height: auto;z-index: -9999;}
-#page-content {margin-top:30%;}
+/*not on landing page - new styles dynamically generated - need to think of a category name - dont have time now..*/
+#dynamic video {width:100%;height:40%;position:static;margin-top: 27px;}
+
