--- a/worldtour/public/styles/main.css
+++ b/worldtour/public/styles/main.css
@@ -11,13 +11,9 @@
 	/*chrome 10*/
 	background-image: -webkit-gradient(radial, center center, 0, center center, 500, color-stop(0, #A3C3EA), color-stop(1, #031A37));
 	/*chrome 11*/
-	background-image: -webkit-radial-gradient(center, circle cover, #A3C3EA 0%. #031A37 100%);
+	background-image: -webkit-radial-gradient(center, circle cover, #A3C3EA 0% #031A37 100%);
 	-webkit-border-raduis: 1ex;
 	-webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
-}
-
-::-webkit-scrollbar-corner {
-	background: #ccdff6;
 }
 
 /********************************* =BEGIN LANDING PAGE *********************************/	
@@ -103,3 +99,162 @@ nav {
 	width:80%;
 	margin: auto;
 } 
+
+/********************************* =ABOUT *********************************/
+#about_content h1, article, p {color:#05356E;}
+
+#about_content h1 {
+	text-align: center;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+#about_content article, p {
+	letter-spacing: 1px;
+	line-height: 21px;
+	text-align: center;
+	font-size: 14px;
+}
+
+#about_content article a {
+	color: #70be12;
+	text-decoration: none;
+	font-weight: bolder;
+}
+
+#about_content article a:hover {
+	text-decoration: underline;
+}
+
+#about_content img {
+	border-radius: 50px;
+	float: left;
+	-moz-transform-style: preserve-3d; /*Mozilla*/
+	-webkit-transform-style: preserve-3d; /*Chrome, Safari, Opera*/
+	transform-style: preserve-3d; /* child elements will preserve its 3D position */
+	transition: all 0.6s ease;
+}
+
+#about_content img:hover {
+	-moz-transform: rotateY(180deg); /*Mozilla*/
+	-webkit-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+}
+
+/********************************* =RECOMMENDATIONS *********************************/
+h1#recommendations {margin-bottom: 35px;}
+#box1, #box2, #box3 {
+	margin-left: 13px;
+	margin-bottom: 20px;
+	height:270px;
+	float: left;
+	width:32%;
+}
+
+#box1 {background: url(/sites/worldtour/public/img/sicily.jpg) no-repeat;}
+#box2 {background: url(/sites/worldtour/public/img/iasi.jpg) no-repeat;}
+#box3 {background: url(/sites/worldtour/public/img/bran.jpg) no-repeat;}
+
+.view_more {
+	border:1px solid #70be12;
+	border-radius: 4px;
+	padding:10px;
+	position: absolute;
+	margin-top: 220px;
+	margin-left: 120px;
+	background: url(/sites/worldtour/public/img/blue_button.png) no-repeat;
+	color: #70be12;
+	opacity: 0.7;
+	font-size: 14px;
+	text-decoration: none;
+}
+
+.view_more:hover {
+	background: url(/sites/worldtour/public/img/green_button.png) no-repeat;
+	opacity: 1;
+	cursor: pointer;
+	color: #05356E;
+	font-weight: bold;
+	border: none;
+}
+
+.location {
+	position: absolute;
+	width:105px;
+	margin-top: -19.6px;
+	margin-left: 242px;
+	background: url(/sites/worldtour/public/img/blue_button2.png) no-repeat;
+	padding: 10px;
+	color: #70be12;
+	font-size: 14px;
+	text-align: center;
+}
+
+span#last {margin-left: 243px;}
+
+.location h4 {
+	margin-top: -7.5px;
+	font-weight: normal;
+	color:#fff;
+	opacity: 0.8;
+}
+
+/********************************* =BEGIN FORM STYLES *********************************/
+#name, #email {width:45%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
+
+#name, #email, #textarea {border:none; padding:10px;color:#d2e3ff;margin-top: 25px;}
+
+#name {margin-left: 3.5%;}
+
+#textarea {
+	resize: none;
+	width:92.3%;
+	background:url(/sites/worldtour/public/img/above-content.png) repeat;
+	margin-left: 3.5%;
+	height:200px;
+	font-size: 14px;
+}
+
+#submit {
+	border: none;
+	float: left;
+	padding:10px;
+	position: absolute;
+	margin-top: 20px;
+	margin-left: 38px;
+	background: url(/sites/worldtour/public/img/above-content.png) no-repeat;
+	color: #d2e3ff;
+	font-size: 14px;
+}
+
+#clear {
+	border: none;
+	float: left;
+	padding:10px;
+	position: absolute;
+	margin-top: 20px;
+	margin-left: 120px;
+	background: url(/sites/worldtour/public/img/above-content.png) no-repeat;
+	color: #d2e3ff;
+	font-size: 14px;
+}
+
+#submit:hover, #clear:hover {
+	background: url(/sites/worldtour/public/img/green_button.png) no-repeat;
+	cursor: pointer;
+	color: #05356E;
+	font-weight: bold;
+}
+
+/********************************* =BEGIN FOOTER *********************************/
+#footer_wrap {
+	min-width: 100%;
+	border-top: 2px solid #70be12;
+	margin-top: 7%;
+	background: url(/sites/worldtour/public/img/above-content.png) repeat;
+	height: 200px;
+}
+
+#footer {
+	min-width: 80%;
+}
