Created login page, amended stories page

--- a/worldtour/public/styles/main.css
+++ b/worldtour/public/styles/main.css
@@ -248,7 +248,6 @@ span#last {margin-left: 243px;}
 
 /********************************* =BEGIN FOOTER *********************************/
 #footer_wrap {
-
 	border-top: 2px solid #70be12;
 	margin-top: 7%;
 	background: url(/sites/worldtour/public/img/above-content.png) repeat;
@@ -276,6 +275,8 @@ span#last {margin-left: 243px;}
 	font-size: 18px;
 	margin-bottom: 10px;
 }
+
+#footer p {color:#b5c8df;}
 
 #footer ul li {
 	list-style-type: none;
