--- a/worldtour/public/styles/login.css
+++ b/worldtour/public/styles/login.css
@@ -58,124 +58,78 @@ nav ul li a:hover {
 	color: #70be12;
 }
 
-/********************************* =BEGIN PAGE CONTENT *********************************/
 
-#page_wraper {
-	width:100%;
-}
-
-#page_content {
-	width:80%;
-	margin: auto;
-	padding-top: 7%;
-}
-
-#page_content p, article {
-	letter-spacing: 1px;
-	line-height: 21px;
-	font-size: 14px;
-	text-align: justify;
-	color:#05356E;
-}
-
-
-.artline {
-	border-color: #70be12;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	opacity: 0.2;
-	margin-bottom: 2px;
-}
-
-/********************************* =BEGIN MISC STYLES *********************************/
-
-.content_headers {
-	margin-bottom: 10px;
-	margin-top: 20px;
-}
-
-#page_content p, .content_headers {
-	color:#05356E;
-	text-align: center;
-}
-
-.postedby {
-	font-size: 13px;
-	color: #235fa5;
-	opacity: 0.7;
-}
-
-.postedby a {
-	color: #70be12;
-	font-style: italic;
-	text-decoration: none;
-}
-
-.postedby a:hover {
-	color: #235fa5;
-	text-decoration: underline;
-}
-
-.time {font-style: italic;}
-
-span #postedby {
-	margin-bottom: 50%;
-}
 /********************************* =BEGIN FORM STYLES *********************************/
-
-#name, #email {width:45%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
-
-#name, #email, #textarea {border:none; padding:10px;color:#d2e3ff;margin-top: 25px;}
-
-#name {margin-left: 3.5%;}
-
-#textarea {
-	resize: none;
-	width:92.3%;
-	background:url(/sites/worldtour/public/img/above-content.png) repeat;
-	margin-left: 3.5%;
-	height:200px;
-	font-size: 14px;
+.loreg {
+	margin-top: 15%;
+	text-align: center;
+	color:#05356E;
 }
 
-#submit {
+#login_box {float: left;width:50%;}
+
+#register_box {float: left;width:50%;}
+
+#email {margin-top: 20px;}
+
+#email, #password, #password2, #country, #squestion, #sanswer {width:90%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
+
+#password, #email, #password2, #country, #squestion, #sanswer {border:none; padding:10px;color:#d2e3ff;}
+
+#password {margin-top: 5px;margin-bottom: 5px;}
+
+#password2, #squestion {margin-top: -1px;margin-bottom: 5px;}
+
+#email, #password, #password2, #country, #squestion, #sanswer {margin-left: 3.5%;}
+
+#login, #register  {
 	border: none;
 	float: left;
 	padding:10px;
 	position: absolute;
-	margin-top: 20px;
-	margin-left: 38px;
+	margin-top: 0px;
+	margin-left: 24px;
 	background: url(/sites/worldtour/public/img/above-content.png) no-repeat;
 	color: #d2e3ff;
 	font-size: 14px;
 }
 
-#clear {
+#cancel, #clear {
 	border: none;
 	float: left;
 	padding:10px;
 	position: absolute;
-	margin-top: 20px;
-	margin-left: 145px;
+	margin-top: 0px;
+	margin-left: 90px;
 	background: url(/sites/worldtour/public/img/above-content.png) no-repeat;
 	color: #d2e3ff;
 	font-size: 14px;
 }
 
-#submit:hover, #clear:hover {
+#login:hover, #cancel:hover, #register:hover, #clear:hover {
 	background: url(/sites/worldtour/public/img/green_button.png) no-repeat;
 	cursor: pointer;
 	color: #05356E;
 	font-weight: bold;
 }
 
-/********************************* =BEGIN FOOTER STYLE *********************************/
+select option {
+    margin:40px;
+    background: #3a6597;
+}
 
+#country {width:93%;margin-bottom: 5px;}
+
+#register, #clear {margin-top: 5px;}
+
+#clear {margin-left: 105px;}
+
+/********************************* =BEGIN FOOTER *********************************/
 #footer_wrap {
+	position: absolute;
 	border-top: 2px solid #70be12;
-	margin-top: 7%;
 	background: url(/sites/worldtour/public/img/above-content.png) repeat;
-	height: 270px;
+	margin-top: 33.5%;
 }
 
 #footer {
@@ -183,17 +137,27 @@ span #postedby {
 	margin:auto;
 }
 
+#recom {margin-left: 0px;margin-right: -55px;}
+
+#recom, #featured_location, #recent_stories {
+	width:30%;
+	float: left;
+	padding-left: 45px;
+	padding-top: 10px;
+	margin-top: 10px;
+	color: #b5c8df;
+	font-size: 14px;
+	letter-spacing: 1px;
+	text-align: center;
+}
+
 #footer h1 {
 	text-align: center;
 	font-size: 18px;
 	margin-bottom: 10px;
-	color: #b5c8df;
 }
 
-#footer p {
-	text-align: center;
-	color:#b6c9df;
-}
+#footer p {color:#b5c8df;}
 
 #footer ul li {
 	list-style-type: none;
@@ -207,23 +171,10 @@ span #postedby {
 
 #footer a:hover {text-decoration: underline;}
 
-#recent_stories {margin-left: 4.5%;}
-
-#featured_location, #recent_stories {
-	width:30%;
-	float: left;
-	padding: 10px;
-	margin-top: 10px;
-	font-size: 14px;
-	letter-spacing: 1px;
-	line-height: 18px;
-}
-
 .social {
 	text-align: center;
 	float: left;
-	margin-top: 20px;
-	margin-left: 2%;
+	width:100%;
 }
 
 .social img {
@@ -240,3 +191,4 @@ span #postedby {
 	-webkit-transform: rotateY(360deg);
 	transform: rotateY(360deg);
 }
+
