--- a/worldtour/ro/public/styles/stories.css
+++ b/worldtour/ro/public/styles/stories.css
@@ -18,7 +18,6 @@
 }
 
 /********************************* =BEGIN NAV STYLES *********************************/
-
 nav {
 	width: 100%;
 	min-width: 30%;
@@ -78,7 +77,6 @@ nav ul li a:hover {
 	color:#05356E;
 }
 
-
 .artline {
 	border-color: #70be12;
 	margin-top: 20px;
@@ -88,7 +86,6 @@ nav ul li a:hover {
 }
 
 /********************************* =BEGIN MISC STYLES *********************************/
-
 .content_headers {
 	margin-bottom: 10px;
 	margin-top: 20px;
@@ -118,11 +115,9 @@ nav ul li a:hover {
 
 .time {font-style: italic;}
 
-span #postedby {
-	margin-bottom: 50%;
-}
-/********************************* =BEGIN FORM STYLES *********************************/
+span #postedby {margin-bottom: 50%;}
 
+/********************************* =BEGIN FORM STYLES *********************************/
 #name, #email {width:45%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
 
 #name, #email, #textarea {border:none; padding:10px;color:#d2e3ff;margin-top: 25px;}
@@ -193,11 +188,6 @@ span #postedby {
 #footer p {
 	text-align: center;
 	color:#b6c9df;
-}
-
-#footer ul li {
-	list-style-type: none;
-	text-align: center;
 }
 
 #footer a {
