Created user registration database, connected website to it, fixed admin page bug

--- a/worldtour/public/styles/admin.css
+++ b/worldtour/public/styles/admin.css
@@ -10,6 +10,13 @@
 	font-size: 14px;
 }
 
+.subheaders {
+	color: #05356E;
+	text-align: left;
+	margin-left: 18.2%;
+	margin-bottom: -18px;
+}
+
 /********************************* =BEGIN SCROLLBAR STYLES *********************************/
 
 ::-webkit-scrollbar {
