--- a/worldtour/public/styles/admin.css
+++ b/worldtour/public/styles/admin.css
@@ -1,21 +1,5 @@
 * {margin: 0;padding: 0;font-family: sans-serif;}
 
-.headers {text-align: center;margin-left: 20%;color:#05356E;}
-
-.beposted {
-	color:#05356E;
-	margin-top: 33.2%;
-	position: absolute;
-	margin-left: 30%;
-	font-size: 14px;
-}
-
-.subheaders {
-	color: #05356E;
-	text-align: left;
-	margin-left: 18.2%;
-	margin-bottom: -18px;
-}
 
 /********************************* =BEGIN SCROLLBAR STYLES *********************************/
 
@@ -117,15 +101,53 @@ nav ul li a:hover {
 	font-weight: bold;
 }
 
-#view {
-	margin-top: 2px; 
-	text-decoration: none;
-}
-
 
 #submit {margin-left: 47px;}
 
 #submit, #view {margin-left: -81.8%;}
 
-#view {margin-left: -73%;}
+#view {
+	margin-top: -136.8px; 
+	text-decoration: none;
+	position: absolute;
+	margin-left: -73%;
+}
+
+/********************************* =BEGIN PHP STYLES *********************************/
+
+.headers {text-align: center;margin-left: 20%;color:#05356E;}
+
+.beposted, .deleted {
+	color:#05356E;
+	margin-top: 33.2%;
+	position: absolute;
+	margin-left: 30%;
+	font-size: 14px;
+}
+
+.deleted {margin-top: 42.2%;margin-left: 25%;}
+
+.subheaders {
+	color: #05356E;
+	text-align: left;
+	margin-left: 18.2%;
+	margin-bottom: -18px;
+}
+
+.dbdata {
+	position: absolute;
+	margin-top: 45%;
+	color: #05356E;
+}
+
+#delete {
+	position: relative;
+	margin-top: 5px;
+}
+
+#title {
+	margin-left: 207px;
+}
+
+#mu {margin-top: 70px;}
 
