--- a/worldtour/public/styles/loggedin.css
+++ b/worldtour/public/styles/loggedin.css
@@ -7,7 +7,7 @@
 	color: #05356E;
 }
 
-.loggedin {margin-top: 8%;margin-left: 44.7%;}
+h2.loggedin {margin-top: 8%;width:100%;text-align: center;}
 
 .cando {margin-top: 11%;margin-left: 40.3%;}
 
