--- a/worldtour/public/styles/login.css
+++ b/worldtour/public/styles/login.css
@@ -71,7 +71,7 @@ nav ul li a:hover {
 
 #register_box {float: left;width:50%;}
 
-#changepwform, #updateacc, #email_users {
+#changepwform, #updateacc, #email_users, #post_blog_entry {
 	margin-top: 10%;
 	position: absolute;
 	margin-left: 29.5%;
@@ -95,13 +95,20 @@ nav ul li a:hover {
 
 #username {margin-bottom: 0px;}
 
-#email, #password, #password2, #country, #fname, #lname, #username, #rec_email, #email_users_subject, #email_users_body {width:90%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
+#email, #password, #password2, #country, #fname, #lname, #username, #rec_email, #email_users_subject, #email_users_body, #content, #title {width:90%;background:url(/sites/worldtour/public/img/above-content.png) no-repeat;}
 
-#password, #email, #password2, #country, #fname, #lname, #username, #rec_email, #email_users_subject, #email_users_body {border:none; padding:10px;color:#d2e3ff;}
+#password, #email, #password2, #country, #fname, #lname, #username, #rec_email, #email_users_subject, #email_users_body, #content, #title {border:none; padding:10px;color:#d2e3ff;}
 
 #email_users_body {
 	resize: none;
 	margin-top: 10px;
+}
+
+#title {margin-top: 1.5%;}
+
+#content {
+	resize: none;
+	margin-top: 1.5%;
 }
 
 #password {margin-top: 5px;margin-bottom: 5px;}
@@ -110,7 +117,7 @@ nav ul li a:hover {
 
 #email, #password, #password2, #country, #fname, #lname, #username {margin-left: 3.5%;}
 
-#login, #register, #submit, #recover, #send_email {
+#login, #register, #submit, #recover, #send_email, #publish {
 	border: none;
 	float: left;
 	padding:10px;
@@ -144,7 +151,7 @@ nav ul li a:hover {
 	font-size: 14px;
 }
 
-#login:hover, #cancel:hover, #register:hover, #clear:hover, #submit:hover, #recover:hover, #send_email:hover, #clear_email_form:hover, #upload_pic:hover {
+#login:hover, #cancel:hover, #register:hover, #clear:hover, #submit:hover, #recover:hover, #send_email:hover, #clear_email_form:hover, #upload_pic:hover, #publish:hover {
 	background: url(/sites/worldtour/public/img/green_button.png) no-repeat;
 	cursor: pointer;
 	color: #05356E;
@@ -155,6 +162,12 @@ nav ul li a:hover {
 	margin-top: 21%;
 	position: absolute;
 	margin-left: -93.8%
+}
+
+#publish {
+	width: 16%;
+	margin-left: 0%;
+	margin-top: 0.8%
 }
 
 #clear_email_form {
