--- a/worldtour/public/styles/login.css
+++ b/worldtour/public/styles/login.css
@@ -159,15 +159,16 @@ nav ul li a:hover {
 }
 
 #send_email {
-	margin-top: 21%;
+	margin-top: -2.5%;
 	position: absolute;
-	margin-left: -93.8%
+	margin-left: 78.7%;
+	width: 15%;
 }
 
 #publish {
 	width: 16%;
-	margin-left: 56%;
-	margin-top: 0.8%
+	margin-left: 77.7%;
+	margin-top: -2.5%
 }
 
 #clear_email_form {
@@ -453,3 +454,8 @@ select option {
 
 .inner a:hover, .inner ul li:hover {color: #70be12;}
 
+#register_captcha {
+	position: absolute;
+	margin-top: 1.1%;
+	margin-left: 15%;
+}
